log changed